--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
         <script src="index.js" defer></script>
         <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
+        <button id="new-grid">New Grid Size</button>
+
         <div id="container">
         </div>
+
     </body>
+
 </html>
